--- a/AIWake_app.ui
+++ b/AIWake_app.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>773</width>
-    <height>587</height>
+    <width>783</width>
+    <height>604</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,8 +23,8 @@
    <widget class="QPushButton" name="bt1">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>510</y>
+      <x>30</x>
+      <y>530</y>
       <width>75</width>
       <height>24</height>
      </rect>
@@ -39,10 +39,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
+      <x>10</x>
+      <y>10</y>
       <width>771</width>
-      <height>491</height>
+      <height>501</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -52,11 +52,11 @@
      <attribute name="title">
       <string>Step 1</string>
      </attribute>
-     <widget class="QCheckBox" name="showBoxes_Cb">
+     <widget class="QCheckBox" name="showBoxesCb">
       <property name="geometry">
        <rect>
-        <x>640</x>
-        <y>0</y>
+        <x>680</x>
+        <y>220</y>
         <width>76</width>
         <height>20</height>
        </rect>
@@ -88,7 +88,7 @@
       <property name="geometry">
        <rect>
         <x>160</x>
-        <y>430</y>
+        <y>440</y>
         <width>75</width>
         <height>24</height>
        </rect>
@@ -101,7 +101,7 @@
       <property name="geometry">
        <rect>
         <x>270</x>
-        <y>430</y>
+        <y>440</y>
         <width>75</width>
         <height>24</height>
        </rect>
@@ -113,14 +113,27 @@
      <widget class="QPushButton" name="pushButton_4">
       <property name="geometry">
        <rect>
-        <x>370</x>
-        <y>430</y>
+        <x>380</x>
+        <y>440</y>
         <width>75</width>
         <height>24</height>
        </rect>
       </property>
       <property name="text">
        <string>PushButton</string>
+      </property>
+     </widget>
+     <widget class="QProgressBar" name="step1Pb">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>410</y>
+        <width>661</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="value">
+       <number>0</number>
       </property>
      </widget>
     </widget>
@@ -133,8 +146,8 @@
    <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>500</y>
+      <x>320</x>
+      <y>520</y>
       <width>461</width>
       <height>41</height>
      </rect>
@@ -184,7 +197,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>773</width>
+     <width>783</width>
      <height>22</height>
     </rect>
    </property>
