--- a/AIWake_app.ui
+++ b/AIWake_app.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>831</width>
+    <width>1294</width>
     <height>860</height>
    </rect>
   </property>
@@ -32,7 +32,7 @@
      <rect>
       <x>10</x>
       <y>50</y>
-      <width>811</width>
+      <width>1261</width>
       <height>541</height>
      </rect>
     </property>
@@ -142,7 +142,7 @@
        <rect>
         <x>0</x>
         <y>450</y>
-        <width>661</width>
+        <width>621</width>
         <height>23</height>
        </rect>
       </property>
@@ -323,6 +323,142 @@
         <normaloff>Resources/app_img/icons/forward.png</normaloff>Resources/app_img/icons/forward.png</iconset>
       </property>
      </widget>
+     <widget class="QLabel" name="PreviewFaceLbl">
+      <property name="geometry">
+       <rect>
+        <x>640</x>
+        <y>310</y>
+        <width>151</width>
+        <height>141</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_16">
+      <property name="geometry">
+       <rect>
+        <x>640</x>
+        <y>310</y>
+        <width>151</width>
+        <height>141</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>Resources/foto1.jpg</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_17">
+      <property name="geometry">
+       <rect>
+        <x>640</x>
+        <y>280</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Face ID:</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="deleteBt">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>450</y>
+        <width>75</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Delete</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="FacePicker">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>280</y>
+        <width>81</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="currentText">
+       <string/>
+      </property>
+      <property name="placeholderText">
+       <string>Choose...</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="VideoSpeed">
+      <property name="geometry">
+       <rect>
+        <x>640</x>
+        <y>240</y>
+        <width>81</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="currentText">
+       <string/>
+      </property>
+      <property name="placeholderText">
+       <string>MAX</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_18">
+      <property name="geometry">
+       <rect>
+        <x>640</x>
+        <y>220</y>
+        <width>71</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Video speed</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="deleteBt_2">
+      <property name="geometry">
+       <rect>
+        <x>640</x>
+        <y>450</y>
+        <width>75</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Accept</string>
+      </property>
+     </widget>
+     <widget class="QPlainTextEdit" name="imgText">
+      <property name="geometry">
+       <rect>
+        <x>790</x>
+        <y>310</y>
+        <width>131</width>
+        <height>141</height>
+       </rect>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+      <property name="overwriteMode">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <zorder>label_16</zorder>
      <zorder>placeholder_step1</zorder>
      <zorder>showBoxesCb</zorder>
      <zorder>selectFile_step1</zorder>
@@ -339,6 +475,14 @@
      <zorder>acceptanceLbl</zorder>
      <zorder>thresholdLbl</zorder>
      <zorder>forwardBt_step1</zorder>
+     <zorder>label_17</zorder>
+     <zorder>deleteBt</zorder>
+     <zorder>FacePicker</zorder>
+     <zorder>VideoSpeed</zorder>
+     <zorder>label_18</zorder>
+     <zorder>deleteBt_2</zorder>
+     <zorder>PreviewFaceLbl</zorder>
+     <zorder>imgText</zorder>
     </widget>
     <widget class="QWidget" name="step2Tab">
      <attribute name="title">
@@ -1007,7 +1151,7 @@
      <rect>
       <x>10</x>
       <y>590</y>
-      <width>811</width>
+      <width>1261</width>
       <height>191</height>
      </rect>
     </property>
@@ -1022,7 +1166,7 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>811</width>
+       <width>1261</width>
        <height>191</height>
       </rect>
      </property>
@@ -1043,7 +1187,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>831</width>
+     <width>1294</width>
      <height>22</height>
     </rect>
    </property>
