--- a/AIWake_app.ui
+++ b/AIWake_app.ui
@@ -1261,6 +1261,22 @@
      <string>Waiting for video source...</string>
     </property>
    </widget>
+   <widget class="QProgressBar" name="postPb">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>30</y>
+      <width>371</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
