--- a/AIWake_app.ui
+++ b/AIWake_app.ui
@@ -458,7 +458,7 @@
        <string>Show only accepted faces on picker</string>
       </property>
       <property name="checked">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
      </widget>
      <widget class="QCheckBox" name="showDetailedCb_3">
@@ -474,7 +474,7 @@
        <string>Delete all rejected faces automatically</string>
       </property>
       <property name="checked">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
      </widget>
      <widget class="QPushButton" name="startPostProcessBt">
@@ -525,6 +525,19 @@
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
+     <widget class="QCheckBox" name="showSelectedOnlyCb">
+      <property name="geometry">
+       <rect>
+        <x>1040</x>
+        <y>40</y>
+        <width>151</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Only show selected face</string>
+      </property>
+     </widget>
      <zorder>label_16</zorder>
      <zorder>placeholder_step1</zorder>
      <zorder>showBoxesCb</zorder>
@@ -554,6 +567,7 @@
      <zorder>startPostProcessBt</zorder>
      <zorder>finishStep1Bt</zorder>
      <zorder>frameSelector</zorder>
+     <zorder>showSelectedOnlyCb</zorder>
     </widget>
     <widget class="QWidget" name="step2Tab">
      <attribute name="title">
