--- a/AIWake_app.ui
+++ b/AIWake_app.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1627</width>
-    <height>648</height>
+    <width>1707</width>
+    <height>647</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -32,7 +32,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>1611</width>
+      <width>1691</width>
       <height>581</height>
      </rect>
     </property>
@@ -249,7 +249,7 @@
        <rect>
         <x>690</x>
         <y>10</y>
-        <width>901</width>
+        <width>981</width>
         <height>101</height>
        </rect>
       </property>
@@ -293,7 +293,7 @@
         <rect>
          <x>10</x>
          <y>40</y>
-         <width>881</width>
+         <width>961</width>
          <height>23</height>
         </rect>
        </property>
@@ -980,12 +980,12 @@
        </widget>
       </widget>
      </widget>
-     <widget class="QFrame" name="frame">
+     <widget class="QFrame" name="plotter">
       <property name="geometry">
        <rect>
         <x>1150</x>
         <y>120</y>
-        <width>441</width>
+        <width>521</width>
         <height>421</height>
        </rect>
       </property>
@@ -995,14 +995,92 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <widget class="QGraphicsView" name="graphicsView">
+      <widget class="QWidget" name="horizontalLayoutWidget">
        <property name="geometry">
         <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>441</width>
-         <height>421</height>
+         <x>10</x>
+         <y>180</y>
+         <width>501</width>
+         <height>231</height>
         </rect>
+       </property>
+       <layout class="QHBoxLayout" name="layoutCanvas"/>
+      </widget>
+      <widget class="QComboBox" name="dataFocus">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>150</y>
+         <width>91</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="currentText">
+        <string/>
+       </property>
+       <property name="placeholderText">
+        <string>MAX</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="tillFrameCb">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>70</y>
+         <width>221</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Show data before selected frame</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="faceDataOnlyCb">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>90</y>
+         <width>221</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Show only selected faced data</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="charTypes">
+       <property name="geometry">
+        <rect>
+         <x>420</x>
+         <y>150</y>
+         <width>91</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="currentText">
+        <string/>
+       </property>
+       <property name="placeholderText">
+        <string>MAX</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_23">
+       <property name="geometry">
+        <rect>
+         <x>380</x>
+         <y>150</y>
+         <width>41</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Charts:</string>
        </property>
       </widget>
      </widget>
@@ -1534,7 +1612,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1627</width>
+     <width>1707</width>
      <height>22</height>
     </rect>
    </property>
